Fix alignement on some elements on firefox

--- a/frontend/app/sass/sidebar.sass
+++ b/frontend/app/sass/sidebar.sass
@@ -83,5 +83,8 @@ $top-height: 70px
     .item
       color: white
       font-size: 14px
+      display: flex
+      flex-direction: row
+      align-items: center
       &.active
         background: #6e8887
