--- a/frontend/app/sass/top.sass
+++ b/frontend/app/sass/top.sass
@@ -34,7 +34,7 @@ $top-height: 70px
 
   .item.search
     flex-grow: 1
-    padding-right: 0
+    padding: 0
     align-items: center
     width: 550px
     max-width: 550px
